# zklean-mlir

./: .gitignore  CMakeLists.txt  README.md  build_deps.sh  build_test.sh
frontend/: README.md  toy.cpp
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  ConvertZKLeanToLLZK.cpp  Passes.cpp  Passes.h  ZKLeanConversion.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/ZKBuilder/: CMakeLists.txt  README  ZKBuilderDialect.cpp  ZKBuilderDialect.h  ZKBuilderDialect.td  ZKBuilderOps.cpp  ZKBuilderOps.h  ZKBuilderOps.td  ZKBuilderTypes.h
lib/Dialect/ZKExpr/: CMakeLists.txt  ZKExprDialect.cpp  ZKExprDialect.h  ZKExprDialect.td  ZKExprOps.cpp  ZKExprOps.h  ZKExprOps.td  ZKExprTypes.h  ZKExprTypes.td
lib/Dialect/ZKLean/: CMakeLists.txt  ZKLeanDialect.cpp  ZKLeanDialect.h  ZKLeanDialect.td  ZKLeanOps.cpp  ZKLeanOps.h  ZKLeanOps.td  ZKLeanTypes.h  ZKLeanTypes.td
tests/: CMakeLists.txt  lit.cmake.cfg.py  zkbuilder_syntax.mlir  zkexpr_syntax.mlir  zklean_syntax.mlir
tools/: CMakeLists.txt  zklean-opt.cpp  zklean_pass.py
